@@ -2,6 +2,7 @@
 
   * Fix path error by using absolute pathname for archive when changing
     the current working directory to the unpack directory.
+  * Fix parsing of the "-v" short option.
 
 0.7 "3000 Miles to Graceland" (released 8.3.2010)
 
